# agent-protocol

./: .gitignore  AGENT_MANIFESTO.md  MOTIVATION.md  README.md  pyproject.toml
scripts/: generate_models.py  test_models.py
specs/: openapi.yaml
src/agent_protocol/: __init__.py  types.py
src/agent_protocol/models/: generated.py
