[project]
name = "agent-protocol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Scott Persinger", email = "scottpersinger@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.5.0",
]

[project.scripts]
agent-protocol = "agent_protocol:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_protocol"]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "flake8",
    "datamodel-code-generator>=0.25.0",
]
